--- a/challenge-rest/pom.xml
+++ b/challenge-rest/pom.xml
@@ -18,8 +18,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency> 
+        <dependency>
             <groupId>challenge.back-end</groupId>
-            <artifactId>chalenge-repository</artifactId>
+            <artifactId>challenge-repository</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
