--- a/challenge-rest/pom.xml
+++ b/challenge-rest/pom.xml
@@ -51,4 +51,13 @@
             <type>jar</type>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.7.RELEASE</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
